--- a/client/stylesheets/nav.css
+++ b/client/stylesheets/nav.css
@@ -30,3 +30,18 @@
 #notifications-dropdown li > a {
 	white-space:normal;
 }
+
+#skill-filter {
+	padding-left: 0;
+}
+
+@media (max-width: 500px) {
+	#hackathon-nav a {
+		border-radius: 100px;
+		font-size: 20pt;
+		height: 60px;
+		width: 60px;
+		text-align: center;
+		vertical-align: middle;
+	}
+}
